--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/style.css" >
         <title>Monk Web</title>
     </head>
-    <body>
-      <div class="main-div" >
+    <body style="background-color: #F9F9F9;">
+      <div class="main-div"  >
         <div class="navbar  navbar-light">
           <a class="navbar-brand"  href="#"><img  src="assets/img/Screenshot 2021-12-28 164420.png" alt="" width="36%" ></a>
             <button class="btn btn-primary btn-lg float-right login-button my-2 my-sm-0 grow" type="submit">Login To Monk Web</button>
@@ -23,16 +24,77 @@
       <div>
         <img src="assets/img/collage.png" width="100%" height="10%" alt="banner">
       </div>
-      <div class="row" style="margin-top: 10%; margin-left: 5%;  padding-bottom: 15%;">
-        <div class="col-md-6">
-          <div class="parent">
-            <img class="image1" src="assets/img/dot-grid-copy.svg" width="20%" />
-            <img class="image2" src="assets/img/Disha-Pages.jpg" width="60%" />
-            <!-- <img class="image3" src="assets/Disha-Pages.jpg" width="60%" /> -->
+      <div class="container" >
+        <div class="row " style="margin-top: 8%;">
+          <div class="col-sm-12">
+            <div class="card shadow p-3 mb-5 bg-white">
+              <div class="card-body ">
+                <div class="row">
+                  <div class="col-sm-6 justify-content-center" >
+                    <img src="assets/img/1image.png" alt="" width="20%" style="margin-top: -87px; margin-left: 37px; border-radius: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                    <h5 class="card-title" style="font-size: clamp(1em,2.2em,3.5em);font-weight:bolder; margin-top: 15%;">No restrictions when you have to pay anybody anywhere</h5>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="parent" style="float: right;">
+                      <img class="image1" src="assets/img/nathan-dumlao-lvWw_G8tKsk-unsplash.jpg" width="100%" style="border-radius:30px;"/>
+                      <img class="image2" src="assets/img/altumcode-TKdtuqB5gWA-unsplash-removebg-preview.png" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-md-6">
-
+      </div>
+      <div class="container" >
+        <div class="row " style="margin-top: 8%;">
+          <div class="col-sm-12">
+            <div class="card shadow p-3 mb-5 bg-white">
+              <div class="card-body ">
+                <div class="row">
+                  <div class="col-sm-6 justify-content-center" >
+                    <img src="assets/img/1image.png" alt="" width="20%" style="margin-top: -87px; margin-left: 37px; border-radius: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                    <h5 class="card-title" style="font-size: clamp(1em,2.2em,3.5em);font-weight:bolder; margin-top: 15%;">No restrictions when you have to pay anybody anywhere</h5>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="parent" style="float: right;">
+                      <img class="image1" src="assets/img/nathan-dumlao-lvWw_G8tKsk-unsplash.jpg" width="100%" style="border-radius:30px;"/>
+                      <img class="image2" src="assets/img/altumcode-TKdtuqB5gWA-unsplash-removebg-preview.png" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container" >
+        <div class="row " style="margin-top: 8%;">
+          <div class="col-sm-12">
+            <div class="card shadow p-3 mb-5 bg-white">
+              <div class="card-body ">
+                <div class="row">
+                  <div class="col-sm-6 justify-content-center" >
+                    <img src="assets/img/1image.png" alt="" width="20%" style="margin-top: -87px; margin-left: 37px; border-radius: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                    <h5 class="card-title" style="font-size: clamp(1em,2.2em,3.5em);font-weight:bolder; margin-top: 15%;">No restrictions when you have to pay anybody anywhere</h5>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="parent" style="float: right;">
+                      <img class="image1" src="assets/img/nathan-dumlao-lvWw_G8tKsk-unsplash.jpg" width="100%" style="border-radius:30px;"/>
+                      <img class="image2" src="assets/img/altumcode-TKdtuqB5gWA-unsplash-removebg-preview.png" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container" >
+        <div class="row" >
+          <div>
+            <img src="assets/img/bg.jpeg" width="100%" height="50%" alt="">
+          </div>
         </div>
       </div>
     </body>
