--- a/index.html
+++ b/index.html
@@ -1,104 +1,213 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/style.css" >
-        <title>Monk Web</title>
-    </head>
-    <body style="background-color: #F9F9F9;">
-      <div class="main-div"  >
-        <div class="navbar  navbar-light">
-          <a class="navbar-brand"  href="#"><img  src="assets/img/Screenshot 2021-12-28 164420.png" alt="" width="36%" ></a>
-            <button class="btn btn-primary btn-lg float-right login-button my-2 my-sm-0 grow" type="submit">Login To Monk Web</button>
-        </div>
-        <div class="text-center justify-content-center headings">
-          <h1 class="top-headings"> Monk enables Faster, Seamless and <br> more Affordable </h1>
-          <p class="mt-10"> cross border payments across the globe.</p>
-          <button class="btn btn-primary btn-lg signup-button grow">Sign-Up To Monk Web</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
+    <link rel="stylesheet" href="assets/css/style.css" >
+    <link rel="stylesheet" href="assets/css/hero.css" >
+    <title>Monk Web</title>
+</head>
+<body style="background-color: #F9F9F9;">
+  <!-- <div class="background"></div> -->
+<!-- <div class="background-texture"></div> -->
+<div class="navbar  navbar-light">
+  <a class="navbar-brand"  href="#"><img  src="assets/img/Screenshot 2021-12-28 164420.png" alt="" width="36%" ></a>
+  <div style="float: left;"> 
+    <button class="btn btn-primary btn-default btn-rounded btn-transparent-primary" style="border-radius: 25px;"><span data-feather="layers"></span>
+      Blog
+    </button>
+    <button class="btn btn-primary btn-default btn-rounded btn-transparent-primary" style="border-radius: 25px;"><span data-feather="layers"></span>
+      Login with Monk Web
+    </button>
+  </div>
+</div>
+<header class="header">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="left-content">
+        <p class="stay-home">Stay Home!!</p>
+        <h1>Monk enables Faster, Seamless<br>Affordable</h1>
+        <p></p>
+        <p class="para">
+          cross border payments across the globe.
+        </p>
+        <button>Sign Up</button>
+        <div class="inline-block mt-3">
+          <img src="assets/img/androidownload.svg" alt="">
+          <img src="assets/img/iosdownload.svg" alt="">
         </div>
       </div>
-      <div>
-        <img src="assets/img/collage.png" width="100%" height="10%" alt="banner">
-      </div>
-      <div class="container" >
-        <div class="row " style="margin-top: 8%;">
-          <div class="col-sm-12">
-            <div class="card shadow p-3 mb-5 bg-white">
-              <div class="card-body ">
-                <div class="row">
-                  <div class="col-sm-6 justify-content-center" >
-                    <img src="assets/img/1image.png" alt="" width="20%" style="margin-top: -87px; margin-left: 37px; border-radius: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-                    <h5 class="card-title" style="font-size: clamp(1em,2.2em,3.5em);font-weight:bolder; margin-top: 15%;">No restrictions when you have to pay anybody anywhere</h5>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="parent" style="float: right;">
-                      <img class="image1" src="assets/img/nathan-dumlao-lvWw_G8tKsk-unsplash.jpg" width="100%" style="border-radius:30px;"/>
-                      <img class="image2" src="assets/img/altumcode-TKdtuqB5gWA-unsplash-removebg-preview.png" />
-                    </div>
-                  </div>
+    </div>
+    <div class="col-md-6" style="text-align: center; position: relative;">
+      <span><div class="dot"></div><div class="dot2"></div></span>
+      <img src="assets/img/istockphoto-481080906-170667a-removebg-preview.png" width="50%" alt="">
+    </div>
+  </div>
+</header>
+  <div >
+    <img class="collage-image" src="assets/img/collage.png" width="100%" height="10%" alt="banner">
+  </div>
+  <!--  First Card -->
+  <div class="container" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500" >
+    <div class="row " style="margin-top: 8%;">
+      <div class="col-sm-12">
+        <div class="card shadow p-3 mb-5 bg-white">
+          <div class="card-body ">
+            <div class="row">
+              <div class="col-sm-5 justify-content-center text-center" >
+                <img src="assets/img/1image.png" alt="" width="20%" style="margin-top: -87px; margin-left: 37px; border-radius: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                <h4 class="card-title" style="font-size: 30px; margin-top: 15%;">No Restrictions when you have to pay anybody anywhere</h4>
+                <div class=".trust-text mt-3 "> As much as we are solving the issue of Faster and more affordable payments, we are also very particular about the security of the transfer. Sender or Receiver transacts 100% within the app. No need to physically go to a Bank or financial provider for any part of the transaction.</div>
+              </div>
+              <div class="col-sm-1">
+              </div>
+              <div class="col-sm-5">
+                <div class="parent" style="float: right;">
+                  <img class="image1" src="assets/img/image2.png" width="100%" style="border-radius:30px;"/>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="container" >
-        <div class="row " style="margin-top: 8%;">
-          <div class="col-sm-12">
-            <div class="card shadow p-3 mb-5 bg-white">
-              <div class="card-body ">
-                <div class="row">
-                  <div class="col-sm-6 justify-content-center" >
-                    <img src="assets/img/1image.png" alt="" width="20%" style="margin-top: -87px; margin-left: 37px; border-radius: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-                    <h5 class="card-title" style="font-size: clamp(1em,2.2em,3.5em);font-weight:bolder; margin-top: 15%;">No restrictions when you have to pay anybody anywhere</h5>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="parent" style="float: right;">
-                      <img class="image1" src="assets/img/nathan-dumlao-lvWw_G8tKsk-unsplash.jpg" width="100%" style="border-radius:30px;"/>
-                      <img class="image2" src="assets/img/altumcode-TKdtuqB5gWA-unsplash-removebg-preview.png" />
-                    </div>
-                  </div>
+    </div>
+  </div>
+  <!-- 2nd Card -->
+  <div class="container" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500" >
+    <div class="row " style="margin-top: 8%;">
+      <div class="col-sm-12">
+        <div class="card shadow p-3 mb-5 bg-white">
+          <div class="card-body ">
+            <div class="row">
+              <div class="col-sm-5 justify-content-center text-center">
+                <div class="parent" style="float: left;">
+                <img src="assets/img/2image.png" alt="" width="20%" style="margin-top: -87px; margin-left: 37px; border-radius: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                  <img class="image1" src="assets/img/130-1308286_web-design-hd-png-image-cartoon-transparent-png-removebg-preview.png" width="100%" style="border-radius:30px;"/>
                 </div>
+              </div>
+              <div class="col-sm-1"></div>
+              <div class="col-sm-5 justify-content-center text-center" >
+                <h4 class="card-title" style="font-size: 30px; margin-top: 15%;">We value the security of your cross border payments.</h4>
+                <div class="trust-text mt-3 "> Sending and Receiving payments seamlessly and securely. You don’t need to go to any bank to receive cross-border payments unlike other services like WorldRemit, Sendwave, Small World, Moneygram. Monk also enables 2-way sending and receiving of transfers. You can send and receive money from any continent using any currency.</div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="container" >
-        <div class="row " style="margin-top: 8%;">
-          <div class="col-sm-12">
-            <div class="card shadow p-3 mb-5 bg-white">
-              <div class="card-body ">
-                <div class="row">
-                  <div class="col-sm-6 justify-content-center" >
-                    <img src="assets/img/1image.png" alt="" width="20%" style="margin-top: -87px; margin-left: 37px; border-radius: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-                    <h5 class="card-title" style="font-size: clamp(1em,2.2em,3.5em);font-weight:bolder; margin-top: 15%;">No restrictions when you have to pay anybody anywhere</h5>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="parent" style="float: right;">
-                      <img class="image1" src="assets/img/nathan-dumlao-lvWw_G8tKsk-unsplash.jpg" width="100%" style="border-radius:30px;"/>
-                      <img class="image2" src="assets/img/altumcode-TKdtuqB5gWA-unsplash-removebg-preview.png" />
-                    </div>
-                  </div>
+    </div>
+  </div>
+  <!-- 3rd Csrd -->
+  <div class="container" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500" >
+    <div class="row " style="margin-top: 8%;">
+      <div class="col-sm-12">
+        <div class="card shadow p-3 mb-5 bg-white">
+          <div class="card-body ">
+            <div class="row">
+              <div class="col-sm-5 justify-content-center text-center">
+                <div class="parent" style="float: left;">
+                  <img src="assets/img/3image.png" alt="" width="20%" style="margin-top: -87px; margin-left: 37px; border-radius: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                  <div style="display: flex;">
+                    <img src="assets/img/tick.png" width="12%" height="12%" alt="" style="margin-top: 10%;">
+                    <h4 class="card-title" style="font-size: 30px; margin-top: 13%;">Pay companies around the world without hassle</h4>
+                  </div> 
+                  <div style="display: flex;">
+                    <img src="assets/img/tick.png" width="12%" height="12%" alt="" style="margin-top: 10%;">
+                    <h4 class="card-title" style="font-size: 30px; margin-top: 13%; margin-left: 5%;">Receive funds easily from anywhere in the world</h4>
+                  </div> 
+                  <div style="display: flex;">
+                    <img src="assets/img/tick.png" width="12%" height="12%" alt="" style="margin-top: 10%;">
+                    <h4 class="card-title" style="font-size: 30px; margin-top: 13%; margin-left: 5%">Send from anywhere to everywhere</h4>
+                  </div> 
                 </div>
+              </div>
+              <div class="col-sm-1">
+              </div>
+              <div class="col-sm-5 justify-content-center text-center" >
+                <img class="image1" src="assets/img/49bcfd78364175.5ca3009cb692f.gif" width="100%" style="border-radius:30px;"/>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="container" >
-        <div class="row" >
-          <div>
-            <img src="assets/img/bg.jpeg" width="100%" height="50%" alt="">
-          </div>
-        </div>
-      </div>
-    </body>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    </div>
+  </div>
+  <div class="container" >
+    <div class="row" >
+    </div>
+  </div>
+  </div>
+  
+</body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+<br>
+<script>
+  5
+  6
+  7
+  8
+  9
+  10
+  11
+  12
+  13
+  14
+  15
+  16
+  17
+  18
+  19
+  20
+  21
+  22
+  23
+  24
+  25
+  26
+  27
+  28
+  29
+  30
+  function showTime() {
+    var date = new Date();
+    var h = date.getHours();
+    var m = date.getMinutes();
+    var s = date.getSeconds();
+
+
+    if (h == 0) {
+      h = 12;
+    }
+
+    if (h > 24) {
+      h = h - 12;
+
+    }
+
+    h = (h < 10) ? "0" + h : h;
+    m = (m < 10) ? "0" + m : m;
+    s = (s < 10) ? "0" + s : s;
+
+    var time = h + ":" + m + ":" + s + " ";
+    document.getElementById("DigitalCLOCK").innerText = time;
+    document.getElementById("DigitalCLOCK").textContent = time;
+
+    setTimeout(showTime, 1000);
+
+  }
+
+  showTime();
+</script>
     </html>
