--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <!-- <div class="background"></div> -->
 <!-- <div class="background-texture"></div> -->
 <div class="navbar  navbar-light">
-  <a class="navbar-brand"  href="#"><img  src="assets/img/Screenshot 2021-12-28 164420.png" alt="" width="36%" ></a>
-  <div style="float: left;"> 
+  <a class="navbar-brand"  href="#"><img class="logo_image" src="assets/img/Screenshot 2021-12-28 164420.png" alt="" width="36%" ></a>
+  <div class="navbar-buttons"> 
     <button class="btn btn-primary btn-default btn-rounded btn-transparent-primary" style="border-radius: 25px;"><span data-feather="layers"></span>
       Blog
     </button>
@@ -37,14 +37,14 @@
         <p class="para">
           cross border payments across the globe.
         </p>
-        <button>Sign Up</button>
+        <button>Join Waiting list</button>
         <div class="inline-block mt-3">
           <img src="assets/img/androidownload.svg" alt="">
           <img src="assets/img/iosdownload.svg" alt="">
         </div>
       </div>
     </div>
-    <div class="col-md-6" style="text-align: center; position: relative;">
+    <div class="top-animation col-md-6">
       <span><div class="dot"></div><div class="dot2"></div></span>
       <img src="assets/img/istockphoto-481080906-170667a-removebg-preview.png" width="50%" alt="">
     </div>
@@ -61,7 +61,7 @@
           <div class="card-body ">
             <div class="row">
               <div class="col-sm-5 justify-content-center text-center" >
-                <img src="assets/img/1image.png" alt="" width="20%" style="margin-top: -87px; margin-left: 37px; border-radius: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                <img src="assets/img/1image.png" alt="" class="small-images" width="20%">
                 <h4 class="card-title" style="font-size: 30px; margin-top: 15%;">No Restrictions when you have to pay anybody anywhere</h4>
                 <div class=".trust-text mt-3 "> As much as we are solving the issue of Faster and more affordable payments, we are also very particular about the security of the transfer. Sender or Receiver transacts 100% within the app. No need to physically go to a Bank or financial provider for any part of the transaction.</div>
               </div>
@@ -87,7 +87,7 @@
             <div class="row">
               <div class="col-sm-5 justify-content-center text-center">
                 <div class="parent" style="float: left;">
-                <img src="assets/img/2image.png" alt="" width="20%" style="margin-top: -87px; margin-left: 37px; border-radius: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                <img src="assets/img/2image.png" class="small-images"  alt="" width="20%">
                   <img class="image1" src="assets/img/130-1308286_web-design-hd-png-image-cartoon-transparent-png-removebg-preview.png" width="100%" style="border-radius:30px;"/>
                 </div>
               </div>
@@ -111,7 +111,7 @@
             <div class="row">
               <div class="col-sm-5 justify-content-center text-center">
                 <div class="parent" style="float: left;">
-                  <img src="assets/img/3image.png" alt="" width="20%" style="margin-top: -87px; margin-left: 37px; border-radius: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                  <img src="assets/img/3image.png" alt="" width="20%" class="small-images">
                   <div style="display: flex;">
                     <img src="assets/img/tick.png" width="12%" height="12%" alt="" style="margin-top: 10%;">
                     <h4 class="card-title" style="font-size: 30px; margin-top: 13%;">Pay companies around the world without hassle</h4>
