--- a/index.html
+++ b/index.html
@@ -13,45 +13,117 @@
     <link rel="stylesheet" href="assets/css/hero.css" >
     <title>Monk Web</title>
 </head>
-<body style="background-color: #F9F9F9;">
+<body>
   <!-- <div class="background"></div> -->
 <!-- <div class="background-texture"></div> -->
-<div class="navbar  navbar-light">
-  <a class="navbar-brand"  href="#"><img class="logo_image" src="assets/img/Screenshot 2021-12-28 164420.png" alt="" width="36%" ></a>
-  <div class="navbar-buttons"> 
-    <button class="btn btn-primary btn-default btn-rounded btn-transparent-primary" style="border-radius: 25px;"><span data-feather="layers"></span>
-      Blog
-    </button>
-    <button class="btn btn-primary btn-default btn-rounded btn-transparent-primary" style="border-radius: 25px;"><span data-feather="layers"></span>
-      Login with Monk Web
-    </button>
+<div class="container">
+  <div class="navbar  navbar-light" style="padding: 0px !important;">
+    <a class="navbar-brand"  href="#"><img class="logo_image" src="assets/img/Screenshot-2021-12-28-164420-piiq78gwrw5pk6ka9wpiqx5ibajzqwk5yfuxmaxn1k.png" alt=""></a>
+    <div class="navbar-buttons" style="margin-top: 2%;"> 
+      <flex-container>
+        <flex-item><a href="" style="color: black !important; text-decoration: none;">Why Monk</a> </flex-item>
+        <flex-item><a href="" style="color: black !important; text-decoration: none;">How It Works</a> </flex-item>
+        <flex-item><a href="" style="color: black !important; text-decoration: none;">Contact Us</a> </flex-item>
+      </flex-container>
+    </div>
   </div>
 </div>
 <header class="header">
-  <div class="row">
-    <div class="col-md-6">
-      <div class="left-content">
-        <p class="stay-home">Stay Home!!</p>
-        <h1>Monk enables Faster, Seamless<br>Affordable</h1>
-        <p></p>
-        <p class="para">
-          cross border payments across the globe.
-        </p>
-        <button>Join Waiting list</button>
-        <div class="inline-block mt-3">
-          <img src="assets/img/androidownload.svg" alt="">
-          <img src="assets/img/iosdownload.svg" alt="">
+  <div class="container" >
+    <div class="row">
+      <div class="col-md-6"  style="margin-top:8%">
+        <div class="left-content">
+          <p class="para">Monk Enables Faster, Seamless And More Affordable Cross Border Payments Across The Globe</p>
+          <button style="background-color: #2D2E83; margin-top: 15%;">Join Our Waiting list</button>
         </div>
       </div>
-    </div>
-    <div class="top-animation col-md-6">
-      <span><div class="dot"></div><div class="dot2"></div></span>
-      <img src="assets/img/istockphoto-481080906-170667a-removebg-preview.png" width="50%" alt="">
+      <div class="col-md-6" style="margin-top:8%">
+        <!-- <span><div class="dot"></div><div class="dot2"></div></span> -->
+        <img src="assets/img/output-onlinegiftools.gif" width="100%" alt="">
+      </div>
     </div>
   </div>
 </header>
-  <div >
-    <img class="collage-image" src="assets/img/collage.png" width="100%" height="10%" alt="banner">
+  <div class="text-center" style="margin-top:5%;" >
+    <h2 class="heading-trusted">
+      trusted By the best
+    </h2>
+    <img class="collage-image" src="assets/img/Partner.png"  alt="banner">
+  </div>
+
+  <div class="text-center mt-5 container">
+    <div class="heading-centered">
+      Why You Need Monk?
+    </div>
+    <div>
+      <img src="assets/img/right-arrow-6.png" alt="">
+    </div>
+    <div class="row mt-2">
+      <div class="col-md-4">
+        <div class="card" style="background-color: #fffafd; border: none; padding: 45px;">
+          <h2 class="elementor-heading-title">
+            1. Pay companies or families around the world without hassle.
+          </h2>
+          <p>
+            Sending money from Africa to your family members who reside abroad (Europe, Asia, Americas). Monk provides you a hassle free way to get the money to your loved ones. Your loved ones can in turn send money to you from wherever continent they are to you wherever you are.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card" style="background-color: #F8FFFE; border: none; padding: 45px;">
+          <h2 class="elementor-heading-title">
+            2. Receive funds easily from anywhere in the world.
+          </h2>
+          <p>
+            Receiving money from Europe, Asia and Americas for soft services rendered or export services.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card" style="background-color: #19145C14; border: none; padding: 45px;">
+          <h2 class="elementor-heading-title">
+            3. Diaspora is more than a currency – it is a path to success and prosperity.
+          </h2>
+          <p>
+            Diasporans (Indigenes of certain countries resident in another country) who want to pay for Real Estates or other investments in their home continent.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6" style="line-height:2.5em">
+        <p class="elementor-4239" style="margin-top: 25% ;">
+          Seamless & Secure
+        </p>
+        <p>
+          Sending and Receiving payments seamlessly and securely. You don’t need to go to any bank to receive cross-border payments unlike other services like WorldRemit, Sendwave, Small World, Moneygram. Monk also enables 2-way sending and receiving of transfers.
+          <br>
+          You can send and receive money from any continent using any currency.
+        </p>
+      </div>
+      <div class="col-md-6">
+        <img src="assets/img/76734-shield-icon.gif" alt="">
+      </div>
+    </div>  
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <img src="assets/img/63787-secure-login.gif" width="90%" alt="">
+      </div>
+      <div class="col-md-6" style="line-height:2.5em">
+        <p class="elementor-4239" style="margin-top: 25% ;">
+          Send From Anywhere To Everywhere
+        </p>
+        <p>
+          As much as we are solving the issue of Faster and more affordable payments, we are also very particular about the security of the transfer.
+          <br>
+          Sender or Receiver transacts 100% within the app. No need to physically go to a Bank or financial provider for any part of the transaction.
+        </p>
+      </div>
+    </div>  
   </div>
   <!--  First Card -->
   <div class="container" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500" >
@@ -137,12 +209,22 @@
       </div>
     </div>
   </div>
-  <div class="container" >
-    <div class="row" >
+  <div class="row" style="background-color: #0A2D7B; padding: 100px; display: flex;">
+    <div class="col-md-6 " style="    justify-content: flex-start;">
+      <h3 style="color: white;">About Us</h3>
+      <p style="color: white;">
+        Monk enables faster, seamless and more affordable cross border payments across the globe. It is the one card that makes all your finances easier to access and manage while giving your money the security it deserves.
+      </p>
+    </div>
+    <div class="col-md-6 text-center">
+      <img src="assets/img/output-onlinepngtools-40-piit3a7raolcq9fdpdtt95xdjrposqmilfkv1ynsa0.png" alt="">
+      <br>
+      <div>
+        <input type="email"  name="" id="" placeholder="Email">
+        <button style="background-color: black; border-radius: 0px;">Subscribe</button>
+      </div>
     </div>
   </div>
-  </div>
-  
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
