--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="col-md-6"  style="margin-top:8%">
         <div class="left-content">
           <p class="para">Monk Enables Faster, Seamless And More Affordable Cross Border Payments Across The Globe</p>
-          <button style="background-color: #2D2E83; margin-top: 15%;">Join Our Waiting list</button>
+          <button style="background-color: #ffffff; margin-top: 15%; color: #2D2E83;">Join Our Waiting list</button>
         </div>
       </div>
       <div class="col-md-6" style="margin-top:8%">
@@ -55,16 +55,16 @@
     <div class="heading-centered">
       Why You Need Monk?
     </div>
-    <div>
+    <!-- <div>
       <img src="assets/img/right-arrow-6.png" alt="">
-    </div>
+    </div> -->
     <div class="row mt-2">
       <div class="col-md-4">
         <div class="card" style="background-color: #fffafd; border: none; padding: 45px;">
           <h2 class="elementor-heading-title">
-            1. Pay companies or families around the world without hassle.
+            Pay companies or families around the world without hassle.
           </h2>
-          <p>
+          <p style="text-align: initial;">
             Sending money from Africa to your family members who reside abroad (Europe, Asia, Americas). Monk provides you a hassle free way to get the money to your loved ones. Your loved ones can in turn send money to you from wherever continent they are to you wherever you are.
           </p>
         </div>
@@ -72,9 +72,9 @@
       <div class="col-md-4">
         <div class="card" style="background-color: #F8FFFE; border: none; padding: 45px;">
           <h2 class="elementor-heading-title">
-            2. Receive funds easily from anywhere in the world.
+            Receive funds easily from anywhere in the world.
           </h2>
-          <p>
+          <p style="text-align: left;">
             Receiving money from Europe, Asia and Americas for soft services rendered or export services.
           </p>
         </div>
@@ -82,9 +82,9 @@
       <div class="col-md-4">
         <div class="card" style="background-color: #19145C14; border: none; padding: 45px;">
           <h2 class="elementor-heading-title">
-            3. Diaspora is more than a currency – it is a path to success and prosperity.
+            Diaspora is more than a currency – it is a path to success and prosperity.
           </h2>
-          <p>
+          <p style="text-align: left;">
             Diasporans (Indigenes of certain countries resident in another country) who want to pay for Real Estates or other investments in their home continent.
           </p>
         </div>
@@ -97,10 +97,10 @@
         <p class="elementor-4239" style="margin-top: 25% ;">
           Seamless & Secure
         </p>
-        <p>
+        <p style="text-align: left;">
           Sending and Receiving payments seamlessly and securely. You don’t need to go to any bank to receive cross-border payments unlike other services like WorldRemit, Sendwave, Small World, Moneygram. Monk also enables 2-way sending and receiving of transfers.
           <br>
-          You can send and receive money from any continent using any currency.
+          As much as we are solving the issue of Faster and more affordable payments, we are also very particular about the security of the transfer.
         </p>
       </div>
       <div class="col-md-6">
@@ -118,31 +118,43 @@
           Send From Anywhere To Everywhere
         </p>
         <p>
-          As much as we are solving the issue of Faster and more affordable payments, we are also very particular about the security of the transfer.
-          <br>
           Sender or Receiver transacts 100% within the app. No need to physically go to a Bank or financial provider for any part of the transaction.
+          <br>
+          You can send and receive money from any continent using any currency.
         </p>
       </div>
     </div>  
   </div>
   <!--  First Card -->
-  <div class="container" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500" >
-    <div class="row " style="margin-top: 8%;">
-      <div class="col-sm-12">
-        <div class="card shadow p-3 mb-5 bg-white">
-          <div class="card-body ">
-            <div class="row">
-              <div class="col-sm-5 justify-content-center text-center" >
-                <img src="assets/img/1image.png" alt="" class="small-images" width="20%">
-                <h4 class="card-title" style="font-size: 30px; margin-top: 15%;">No Restrictions when you have to pay anybody anywhere</h4>
-                <div class=".trust-text mt-3 "> As much as we are solving the issue of Faster and more affordable payments, we are also very particular about the security of the transfer. Sender or Receiver transacts 100% within the app. No need to physically go to a Bank or financial provider for any part of the transaction.</div>
+</div>
+<div  style="padding:50px; background-image:url('./assets/img/bg-image.png'); margin-top: 10%;" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card shadow p-3 mb-5 bg-white">
+        <div class="card-body ">
+          <div class="row">
+            <div class="col-sm-12 justify-content-center text-center" >
+              <div style="display: flex;">
+                <img class="" src="assets/img/number-one (1).png"  width="30%" height="30%" alt="Card image cap">
+                <p class="trust-text mt-3 ml-3" style="text-align: initial;">
+                  Sender deposits money from his credit card, bank account or mobile money wallet in any currency into the Monk app multi-currency wallet.
+                </p>
               </div>
-              <div class="col-sm-1">
-              </div>
-              <div class="col-sm-5">
-                <div class="parent" style="float: right;">
-                  <img class="image1" src="assets/img/image2.png" width="100%" style="border-radius:30px;"/>
-                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card shadow p-3 mb-5 bg-white">
+        <div class="card-body ">
+          <div class="row">
+            <div class="col-sm-12 justify-content-center text-center" >
+              <div style="display: flex;">
+                <img class="" src="assets/img/number-2 (1).png"  width="30%" height="30%" alt="Card image cap">
+                <p class="trust-text mt-3 ml-3" style="text-align: initial;">
+                  Sender chooses to send from any currency wallet and selects the receiver’s currency and country.
+                </p>
               </div>
             </div>
           </div>
@@ -150,23 +162,33 @@
       </div>
     </div>
   </div>
-  <!-- 2nd Card -->
-  <div class="container" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500" >
-    <div class="row " style="margin-top: 8%;">
-      <div class="col-sm-12">
-        <div class="card shadow p-3 mb-5 bg-white">
-          <div class="card-body ">
-            <div class="row">
-              <div class="col-sm-5 justify-content-center text-center">
-                <div class="parent" style="float: left;">
-                <img src="assets/img/2image.png" class="small-images"  alt="" width="20%">
-                  <img class="image1" src="assets/img/130-1308286_web-design-hd-png-image-cartoon-transparent-png-removebg-preview.png" width="100%" style="border-radius:30px;"/>
-                </div>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card shadow p-3 mb-5 bg-white">
+        <div class="card-body ">
+          <div class="row">
+            <div class="col-sm-12 justify-content-center text-center" >
+              <div style="display: flex;">
+                <img class="" src="assets/img/number-3 (1).png"  width="30%" height="30%" alt="Card image cap">
+                <p class="trust-text mt-3 ml-3" style="text-align: initial;">
+                  Sender selects the recipients phone number as identifier.
+                </p>
               </div>
-              <div class="col-sm-1"></div>
-              <div class="col-sm-5 justify-content-center text-center" >
-                <h4 class="card-title" style="font-size: 30px; margin-top: 15%;">We value the security of your cross border payments.</h4>
-                <div class="trust-text mt-3 "> Sending and Receiving payments seamlessly and securely. You don’t need to go to any bank to receive cross-border payments unlike other services like WorldRemit, Sendwave, Small World, Moneygram. Monk also enables 2-way sending and receiving of transfers. You can send and receive money from any continent using any currency.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card shadow p-3 mb-5 bg-white">
+        <div class="card-body ">
+          <div class="row">
+            <div class="col-sm-12 justify-content-center text-center" >
+              <div style="display: flex;">
+                <img class="" src="assets/img/number-four (1).png"  width="30%" height="30%" alt="Card image cap">
+                <p class="trust-text mt-3 ml-3" style="text-align: initial;">
+                  Sender initiates fund transfer.
+                </p>
               </div>
             </div>
           </div>
@@ -174,34 +196,33 @@
       </div>
     </div>
   </div>
-  <!-- 3rd Csrd -->
-  <div class="container" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500" >
-    <div class="row " style="margin-top: 8%;">
-      <div class="col-sm-12">
-        <div class="card shadow p-3 mb-5 bg-white">
-          <div class="card-body ">
-            <div class="row">
-              <div class="col-sm-5 justify-content-center text-center">
-                <div class="parent" style="float: left;">
-                  <img src="assets/img/3image.png" alt="" width="20%" class="small-images">
-                  <div style="display: flex;">
-                    <img src="assets/img/tick.png" width="12%" height="12%" alt="" style="margin-top: 10%;">
-                    <h4 class="card-title" style="font-size: 30px; margin-top: 13%;">Pay companies around the world without hassle</h4>
-                  </div> 
-                  <div style="display: flex;">
-                    <img src="assets/img/tick.png" width="12%" height="12%" alt="" style="margin-top: 10%;">
-                    <h4 class="card-title" style="font-size: 30px; margin-top: 13%; margin-left: 5%;">Receive funds easily from anywhere in the world</h4>
-                  </div> 
-                  <div style="display: flex;">
-                    <img src="assets/img/tick.png" width="12%" height="12%" alt="" style="margin-top: 10%;">
-                    <h4 class="card-title" style="font-size: 30px; margin-top: 13%; margin-left: 5%">Send from anywhere to everywhere</h4>
-                  </div> 
-                </div>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card shadow p-3 mb-5 bg-white">
+        <div class="card-body ">
+          <div class="row">
+            <div class="col-sm-12 justify-content-center text-center" >
+              <div style="display: flex;">
+                <img class="" src="assets/img/number-5 (1).png"  width="30%" height="30%" alt="Card image cap">
+                <p class="trust-text mt-3 ml-3" style="text-align: initial;">
+                  Receiver gets a notification as SMS (if not a current Monk app user) or directly on the application (if is an existing Monk app user).
+                </p>
               </div>
-              <div class="col-sm-1">
-              </div>
-              <div class="col-sm-5 justify-content-center text-center" >
-                <img class="image1" src="assets/img/49bcfd78364175.5ca3009cb692f.gif" width="100%" style="border-radius:30px;"/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card shadow p-3 mb-5 bg-white">
+        <div class="card-body ">
+          <div class="row">
+            <div class="col-sm-12 justify-content-center text-center" >
+              <div style="display: flex;">
+                <img class="" src="assets/img/six (1).png"  width="30%" height="30%" alt="Card image cap">
+                <p class="trust-text mt-3 ml-3" style="text-align: initial;">
+                  Receiver can settle (withdraw) funds that have been sent to either credit card, bank account, mobile money account or the Monk Virtual Card.
+                </p>
               </div>
             </div>
           </div>
@@ -209,22 +230,29 @@
       </div>
     </div>
   </div>
-  <div class="row" style="background-color: #0A2D7B; padding: 100px; display: flex;">
-    <div class="col-md-6 " style="    justify-content: flex-start;">
-      <h3 style="color: white;">About Us</h3>
-      <p style="color: white;">
-        Monk enables faster, seamless and more affordable cross border payments across the globe. It is the one card that makes all your finances easier to access and manage while giving your money the security it deserves.
-      </p>
+</div>
+<div class="row" style="background-color: #0A2D7B; padding: 100px; display: flex;">
+  <div class="col-md-6 " style="    justify-content: flex-start;">
+    <h3 style="color: white;">About Us</h3>
+    <p style="color: white;">
+      Monk enables faster, seamless and more affordable cross border payments across the globe. It also enables 2-way sending and receiving of transfers. You can send and receive money from any continent using any currency much cheaper than other platforms. Sender and Receiver transacts 100% within the app. No need to physically go to a Bank or financial provider for any part of the transaction.
+    </p>
+  </div>
+  <div class="col-md-6 text-center">
+    <img src="assets/img/output-onlinepngtools-40-piit3a7raolcq9fdpdtt95xdjrposqmilfkv1ynsa0.png" alt="">
+    <br>
+    <div class="mt-3 mb-3" style="justify-content: center;">
+      <a href="https://www.facebook.com/monkpayments"><img src="assets/img/facebook.png" width="10%" heigth="10%" alt=""></a>
+      <a href="https://www.linkedin.com/company/monkpay/"><img src="assets/img/Linkedin-Logo-PNG-Black-Circle-1024x1024.png" width="10%" heigth="10%" alt=""></a>
+      <a href="https://twitter.com/MonkPayments"><img src="assets/img/twitter.png" width="10%" heigth="10%" alt=""></a>
+      <a href="https://www.instagram.com/monkpayments/"><img src="assets/img/instagram.png" width="10%" heigth="10%" alt=""></a>
     </div>
-    <div class="col-md-6 text-center">
-      <img src="assets/img/output-onlinepngtools-40-piit3a7raolcq9fdpdtt95xdjrposqmilfkv1ynsa0.png" alt="">
-      <br>
-      <div>
-        <input type="email"  name="" id="" placeholder="Email">
-        <button style="background-color: black; border-radius: 0px;">Subscribe</button>
-      </div>
+    <div>
+      <input type="email"  name="" id="" placeholder="Email">
+      <button style="background-color: black; border-radius: 0px;">Subscribe</button>
     </div>
   </div>
+</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
