--- a/index.html
+++ b/index.html
@@ -14,19 +14,34 @@
     <title>Monk Web</title>
 </head>
 <body>
-  <!-- <div class="background"></div> -->
-<!-- <div class="background-texture"></div> -->
-<div class="container">
-  <div class="navbar  navbar-light" style="padding: 0px !important;">
-    <a class="navbar-brand"  href="#"><img class="logo_image" src="assets/img/Screenshot-2021-12-28-164420-piiq78gwrw5pk6ka9wpiqx5ibajzqwk5yfuxmaxn1k.png" alt=""></a>
-    <div class="navbar-buttons" style="margin-top: 2%;"> 
+<div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"><img src="assets/img/Screenshot-2021-12-28-164420-piiq78gwrw5pk6ka9wpiqx5ibajzqwk5yfuxmaxn1k.png" alt="logo"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse text-center" id="navbarNav"> 
       <flex-container>
-        <flex-item><a href="" style="color: black !important; text-decoration: none;">Why Monk</a> </flex-item>
-        <flex-item><a href="" style="color: black !important; text-decoration: none;">How It Works</a> </flex-item>
-        <flex-item><a href="" style="color: black !important; text-decoration: none;">Contact Us</a> </flex-item>
-      </flex-container>
+      <ul class="navbar-nav">
+        <flex-item>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Why Monk <span class="sr-only">(current)</span></a>
+          </li>
+        </flex-item>
+        <flex-item>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">How It Works</a>
+          </li>
+        </flex-item>
+        <flex-item>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Contact Us</a>
+          </li>
+        </flex-item>
+      </ul>
+    </flex-container>
     </div>
-  </div>
+  </nav>
 </div>
 <header class="header">
   <div class="container" >
@@ -34,32 +49,32 @@
       <div class="col-md-6"  style="margin-top:8%">
         <div class="left-content">
           <p class="para">Monk Enables Faster, Seamless And More Affordable Cross Border Payments Across The Globe</p>
-          <button style="background-color: #ffffff; margin-top: 15%; color: #2D2E83;">Join Our Waiting list</button>
+          <a class="btn btn-lg" href="signup.html"  style="background-color: #ffffff; margin-top: 15%; color: #2D2E83;">Join Our Waiting list</a>
         </div>
       </div>
       <div class="col-md-6" style="margin-top:8%">
         <!-- <span><div class="dot"></div><div class="dot2"></div></span> -->
-        <img src="assets/img/output-onlinegiftools.gif" width="100%" alt="">
+        <img src="assets/img/output-onlinegiftools.gif" class="top-giph" width="100%" alt="">
       </div>
     </div>
   </div>
 </header>
-  <div class="text-center" style="margin-top:5%;" >
+  <div class="text-center collage-image" style="margin-top:5%;" >
     <h2 class="heading-trusted">
       trusted By the best
     </h2>
-    <img class="collage-image" src="assets/img/Partner.png"  alt="banner">
+    <img width="100%" src="assets/img/Partner.png"  alt="banner">
   </div>
 
-  <div class="text-center mt-5 container">
-    <div class="heading-centered">
+  <div class="text-center mt-2">
+    <div class="heading-centered mb-3">
       Why You Need Monk?
     </div>
     <!-- <div>
       <img src="assets/img/right-arrow-6.png" alt="">
     </div> -->
-    <div class="row mt-2">
-      <div class="col-md-4">
+    <div class="row mt-2 central-items">
+      <div class="col-md-4 for-mobile">
         <div class="card" style="background-color: #fffafd; border: none; padding: 45px;">
           <h2 class="elementor-heading-title">
             Pay companies or families around the world without hassle.
@@ -69,7 +84,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 for-mobile">
         <div class="card" style="background-color: #F8FFFE; border: none; padding: 45px;">
           <h2 class="elementor-heading-title">
             Receive funds easily from anywhere in the world.
@@ -79,7 +94,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 for-mobile">
         <div class="card" style="background-color: #19145C14; border: none; padding: 45px;">
           <h2 class="elementor-heading-title">
             Diaspora is more than a currency – it is a path to success and prosperity.
@@ -91,10 +106,15 @@
       </div>
     </div>
   </div>
+  <div class="conatiner-center-button" style="margin-top: 2%; margin-bottom: 2%;">
+    <div class="center-button">
+      <a class="btn btn-lg central-button" href="signup.html"  style="background-color: #2D2E83; margin-top: 15%; color: #ffffff;">Join Our Waiting list</a>
+    </div>
+  </div>
   <div class="container">
     <div class="row">
       <div class="col-md-6" style="line-height:2.5em">
-        <p class="elementor-4239" style="margin-top: 25% ;">
+        <p class="elementor-4239">
           Seamless & Secure
         </p>
         <p style="text-align: left;">
@@ -104,17 +124,17 @@
         </p>
       </div>
       <div class="col-md-6">
-        <img src="assets/img/76734-shield-icon.gif" alt="">
+        <img src="assets/img/76734-shield-icon.gif" alt="" width="90%">
       </div>
     </div>  
   </div>
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <img src="assets/img/63787-secure-login.gif" width="90%" alt="">
+        <img class="image-to-hide" src="assets/img/63787-secure-login.gif" width="90%" alt="">
       </div>
       <div class="col-md-6" style="line-height:2.5em">
-        <p class="elementor-4239" style="margin-top: 25% ;">
+        <p class="elementor-4239">
           Send From Anywhere To Everywhere
         </p>
         <p>
@@ -127,15 +147,15 @@
   </div>
   <!--  First Card -->
 </div>
-<div  style="padding:50px; background-image:url('./assets/img/bg-image.png'); margin-top: 10%;" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
+<div class="small-cards" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
   <div class="row">
     <div class="col-sm-6">
       <div class="card shadow p-3 mb-5 bg-white">
         <div class="card-body ">
           <div class="row">
             <div class="col-sm-12 justify-content-center text-center" >
-              <div style="display: flex;">
-                <img class="" src="assets/img/number-one (1).png"  width="30%" height="30%" alt="Card image cap">
+              <div class="card-mobile">
+                <img class="number-images-mobile" src="assets/img/number-one (1).png"  alt="Card image cap">
                 <p class="trust-text mt-3 ml-3" style="text-align: initial;">
                   Sender deposits money from his credit card, bank account or mobile money wallet in any currency into the Monk app multi-currency wallet.
                 </p>
@@ -150,8 +170,8 @@
         <div class="card-body ">
           <div class="row">
             <div class="col-sm-12 justify-content-center text-center" >
-              <div style="display: flex;">
-                <img class="" src="assets/img/number-2 (1).png"  width="30%" height="30%" alt="Card image cap">
+              <div class="card-mobile">
+                <img class="number-images-mobile-special" src="assets/img/number-2 (1).png"  alt="Card image cap">
                 <p class="trust-text mt-3 ml-3" style="text-align: initial;">
                   Sender chooses to send from any currency wallet and selects the receiver’s currency and country.
                 </p>
@@ -168,8 +188,8 @@
         <div class="card-body ">
           <div class="row">
             <div class="col-sm-12 justify-content-center text-center" >
-              <div style="display: flex;">
-                <img class="" src="assets/img/number-3 (1).png"  width="30%" height="30%" alt="Card image cap">
+              <div class="card-mobile">
+                <img class="number-images-mobile-special" src="assets/img/number-3 (1).png"  alt="Card image cap">
                 <p class="trust-text mt-3 ml-3" style="text-align: initial;">
                   Sender selects the recipients phone number as identifier.
                 </p>
@@ -184,8 +204,8 @@
         <div class="card-body ">
           <div class="row">
             <div class="col-sm-12 justify-content-center text-center" >
-              <div style="display: flex;">
-                <img class="" src="assets/img/number-four (1).png"  width="30%" height="30%" alt="Card image cap">
+              <div class="card-mobile">
+                <img class="number-images-mobile-special number-images-mobile-special-four" src="assets/img/number-four (1).png"  alt="Card image cap">
                 <p class="trust-text mt-3 ml-3" style="text-align: initial;">
                   Sender initiates fund transfer.
                 </p>
@@ -202,8 +222,8 @@
         <div class="card-body ">
           <div class="row">
             <div class="col-sm-12 justify-content-center text-center" >
-              <div style="display: flex;">
-                <img class="" src="assets/img/number-5 (1).png"  width="30%" height="30%" alt="Card image cap">
+              <div class="card-mobile">
+                <img class="number-images-mobile" src="assets/img/number-5 (1).png"  alt="Card image cap">
                 <p class="trust-text mt-3 ml-3" style="text-align: initial;">
                   Receiver gets a notification as SMS (if not a current Monk app user) or directly on the application (if is an existing Monk app user).
                 </p>
@@ -218,8 +238,8 @@
         <div class="card-body ">
           <div class="row">
             <div class="col-sm-12 justify-content-center text-center" >
-              <div style="display: flex;">
-                <img class="" src="assets/img/six (1).png"  width="30%" height="30%" alt="Card image cap">
+              <div class="card-mobile">
+                <img class="number-images-mobile" src="assets/img/six (1).png"  alt="Card image cap">
                 <p class="trust-text mt-3 ml-3" style="text-align: initial;">
                   Receiver can settle (withdraw) funds that have been sent to either credit card, bank account, mobile money account or the Monk Virtual Card.
                 </p>
@@ -231,8 +251,8 @@
     </div>
   </div>
 </div>
-<div class="row" style="background-color: #0A2D7B; padding: 100px; display: flex;">
-  <div class="col-md-6 " style="    justify-content: flex-start;">
+<div class="row footers">
+  <div class="col-md-6 " style="justify-content: flex-start;">
     <h3 style="color: white;">About Us</h3>
     <p style="color: white;">
       Monk enables faster, seamless and more affordable cross border payments across the globe. It also enables 2-way sending and receiving of transfers. You can send and receive money from any continent using any currency much cheaper than other platforms. Sender and Receiver transacts 100% within the app. No need to physically go to a Bank or financial provider for any part of the transaction.
@@ -263,61 +283,5 @@
   AOS.init();
 </script>
 <br>
-<script>
-  5
-  6
-  7
-  8
-  9
-  10
-  11
-  12
-  13
-  14
-  15
-  16
-  17
-  18
-  19
-  20
-  21
-  22
-  23
-  24
-  25
-  26
-  27
-  28
-  29
-  30
-  function showTime() {
-    var date = new Date();
-    var h = date.getHours();
-    var m = date.getMinutes();
-    var s = date.getSeconds();
 
-
-    if (h == 0) {
-      h = 12;
-    }
-
-    if (h > 24) {
-      h = h - 12;
-
-    }
-
-    h = (h < 10) ? "0" + h : h;
-    m = (m < 10) ? "0" + m : m;
-    s = (s < 10) ? "0" + s : s;
-
-    var time = h + ":" + m + ":" + s + " ";
-    document.getElementById("DigitalCLOCK").innerText = time;
-    document.getElementById("DigitalCLOCK").textContent = time;
-
-    setTimeout(showTime, 1000);
-
-  }
-
-  showTime();
-</script>
-    </html>
+</html>
